#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package ParCorAna
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-28
- make sure rank0 avaiable for viewer
- cleanup code, comments
- start mpi4py programming tips file.
- simplify timing wrapper, add timing to server functions
- change warning about related to failing calibration, reduce false positives	
	
Tag: V00-00-27
- take out unused function readDetectorDataAndEventTimes
- fix unit tests to use calibration constants that are readable from psdev
- add warning in the beginning if it looks like the calibration is failing
- add default print_bits=0 option to psana config so it is easier to change it
	
Tag: V00-00-26
- disable parcorana unit test since it broke nightly
	
Tag: V00-00-25
- update default_config.py to include new UserG2 params for ipimbs
- work on documentation
- clean up some things in example config files
	
Tag: V00-00-24
- remove saturated pixels from finecolor as well as color data.
- add unit test for saturated pixels based on parsing output.
	
Tag: V00-00-23
- improve error message about saturated pixels being removed from colors
	
Tag: V00-00-22
- replace inefficient averaging over color and finecolors with efficient
  numpy.bincount. Should greatly increase spead of viewer with many colors.
- do not require h5output or testH5output to be set for test_main or test_alt modes
  useful for debugging config file with no h5output.
- warn/error about finecolor file == 0 when color file != 0
- UserG2 refactors: debugPlot function, loadColorFile function, replaceSubsetsWithAverage
  make modifications to colors based on saturated pixels more explicit
	
Tag: V00-00-21: