@@ -11,6 +11,10 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-29
+- remove MPI Barriers - improves performance
+- record timing for more functions
+	
 Tag: V00-00-28
 - make sure rank0 avaiable for viewer
 - cleanup code, comments
